SUBDIRS = osx suse
DIST_SUBDIRS = osx suse

confdir = $(sysconfdir)/tor

EXTRA_DIST = exitlist tor-tsocks.conf torify.1 TorControl.py tor.sh torctl rc.subr ExerciseServer.py PathDemo.py cross.sh tor-mingw.nsi.in package_nsis-mingw.sh tor.ico

conf_DATA = tor-tsocks.conf

bin_SCRIPTS = torify

man_MANS = torify.1
