SUBDIRS = osx suse
DIST_SUBDIRS = osx suse

confdir = $(sysconfdir)/tor

EXTRA_DIST = exitlist tor-tsocks.conf torify.1 tor.nsi.in tor.sh torctl rc.subr cross.sh tor-mingw.nsi.in package_nsis-mingw.sh tor.ico tor-ctrl.sh linux-tor-prio.sh tor-exit-notice.html

conf_DATA = tor-tsocks.conf

bin_SCRIPTS = torify

man_MANS = torify.1
