SUBDIRS = suse
DIST_SUBDIRS = suse

confdir = $(sysconfdir)/tor

EXTRA_DIST = \
	cross.sh				\
	exitlist				\
	linux-tor-prio.sh			\
	package_nsis-mingw.sh			\
	rc.subr					\
	tor-ctrl.sh				\
	tor-exit-notice.html			\
	tor-mingw.nsi.in			\
	tor-tsocks.conf				\
	tor.ico					\
	tor.nsi.in				\
	tor.sh					\
	torctl

conf_DATA = tor-tsocks.conf

bin_SCRIPTS = torify
