
EXTRA_DIST = HACKING                                         \
             tor-resolve.1 tor-gencert.1                     \
             tor-osx-dmg-creation.txt tor-rpm-creation.txt   \
             tor-win32-mingw-creation.txt spec/README

man_MANS = tor.1 tor-resolve.1 tor-gencert.1

SUBDIRS = design-paper

DIST_SUBDIRS = design-paper

